// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fetch hello world message 1`] = `
<div>
  <div
    class="main"
  >
    <div>
      <a
        href="https://vitejs.dev"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="Vite logo"
          class="logo"
          src="/vite.svg"
        />
      </a>
      <a
        href="https://react.dev"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="React logo"
          class="logo react"
          src="/src/assets/react.svg"
        />
      </a>
    </div>
    <h1>
      Vite + React
    </h1>
    <div
      class="card"
    >
      <button
        data-testid="fetch-button"
      >
        Hello, World!
      </button>
      <p>
        Edit 
        <code>
          src/App.tsx
        </code>
         and save to test HMR
      </p>
    </div>
    <p
      class="readTheDocs"
    >
      Click on the Vite and React logos to learn more
    </p>
  </div>
</div>
`;

exports[`should render application 1`] = `
<div>
  <div
    class="main"
  >
    <div>
      <a
        href="https://vitejs.dev"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="Vite logo"
          class="logo"
          src="/vite.svg"
        />
      </a>
      <a
        href="https://react.dev"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="React logo"
          class="logo react"
          src="/src/assets/react.svg"
        />
      </a>
    </div>
    <h1>
      Vite + React
    </h1>
    <div
      class="card"
    >
      <button
        data-testid="fetch-button"
      >
        Fetch
      </button>
      <p>
        Edit 
        <code>
          src/App.tsx
        </code>
         and save to test HMR
      </p>
    </div>
    <p
      class="readTheDocs"
    >
      Click on the Vite and React logos to learn more
    </p>
  </div>
</div>
`;
